--- a/index.html
+++ b/index.html
@@ -13,6 +13,35 @@
 </head>
 <body>
     <main>
+        <!-- Skills -->
+        <section class="skills" id="skills">
+            <h2>
+                SKILLS
+            </h2>
+            <!-- html -->
+            <div id="html">
+                <aside></aside>
+                <p>
+                    Build HTML-5 websites defining basic structure and using semantic HTML properly. Building a properly menu, tables and forms.
+                </p>
+            </div>
+            <!-- css -->
+            <div id="css">
+                <p>
+                    Using CSS to apply styling to the website by using tags, classes, and id selector. Plus, builing a responsive website, using @media query selector.
+                </p>
+                <aside></aside>
+            </div>
+
+            <!-- JavaScript -->
+            <div id="javascript">
+                <aside></aside>
+                <p>
+                    Programming language that is one of the core technologies of the World Wide Web, alongside HTML and CSS. --by Wikipedia
+                </p>
+            </div>
+        </section>
+        
         <!-- 
         #1 Remove style form the div Card
         #1.1 insert into CSS
