--- a/index.html
+++ b/index.html
@@ -13,6 +13,30 @@
 </head>
 <body>
     <main>
+
+        <!-- project -->
+        <section class="projects" id="projects">
+            <!-- accordion wrapper -->
+            <div class="accordion" id="accordionExample">
+                <!-- First project -->
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="headingOne">
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                      Personal Portfolio - Html and CSS
+                    </button>
+                    </h2>
+                    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                        <p>
+                            <strong>This is my first my HTML and css project. </strong> I had to work  5 days to build  4 pages of my portfolio, talking about my skills, education, background experience, and project. Desipite that this is my first project, I have improved way more.
+                        </p>
+                    </div>
+                  </div>
+                </div>
+            </div>
+
+        </section>
+
         <!-- Skills -->
         <section class="skills" id="skills">
             <h2>
