--- a/index.html
+++ b/index.html
@@ -15,26 +15,78 @@
     <main>
 
         <!-- project -->
+      
         <section class="projects" id="projects">
+            <h2>
+                projects
+            </h2>
             <!-- accordion wrapper -->
             <div class="accordion" id="accordionExample">
                 <!-- First project -->
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="headingOne">
-                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#projectOne" aria-expanded="false" aria-controls="collapseOne">
                       Personal Portfolio - Html and CSS
                     </button>
                     </h2>
-                    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                    <div id="projectone" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#projectWrapper">
                         <div class="accordion-body">
+                        <aside>
+                            #1 screenshot
+                        </aside>
                         <p>
                             <strong>This is my first my HTML and css project. </strong> I had to work  5 days to build  4 pages of my portfolio, talking about my skills, education, background experience, and project. Desipite that this is my first project, I have improved way more.
                         </p>
+                        <a href="https://www.github.com" target="_blank" class="btn">
+                            portfolio repository
+                        </a>
                     </div>
                   </div>
                 </div>
             </div>
+            <!-- second -->
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingTwo">
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#projecttwo" aria-expanded="false" aria-controls="collapsetwo">
+                      Personal Portfolio - Html and CSS
+                    </button>
+                    </h2>
+                    <div id="projecttwo" class="accordion-collapse collapse show" aria-labelledby="headingtwo" data-bs-parent="#projectWrapper">
+                        <div class="accordion-body">
+                        <aside>
+                            #2 screenshot
+                        </aside>
+                        <p>
+                            <strong>This is my first my HTML and css project. </strong> I had to work  5 days to build  4 pages of my portfolio, talking about my skills, education, background experience, and project. Desipite that this is my first project, I have improved way more.
+                        </p>
+                        <a href="https://www.github.com" target="_blank" class="btn">
+                            portfolio repository
+                        </a>
+                    </div>
+                  </div>
+            </div> <!-- end of second -->
 
+            <!-- third -->
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingThree">
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#projectthree" aria-expanded="false" aria-controls="collapsethree">
+                      Personal Portfolio - Html and CSS
+                    </button>
+                    </h2>
+                    <div id="projectthree" class="accordion-collapse collapse show" aria-labelledby="headingthree" data-bs-parent="#projectWrapper">
+                        <div class="accordion-body">
+                        <aside>
+                            #3 screenshot
+                        </aside>
+                        <p>
+                            <strong>This is my first my HTML and css project. </strong> I had to work  5 days to build  4 pages of my portfolio, talking about my skills, education, background experience, and project. Desipite that this is my first project, I have improved way more.
+                        </p>
+                        <a href="https://www.github.com" target="_blank" class="btn">
+                            portfolio repository
+                        </a>
+                    </div>
+                  </div>
+            </div> <!--end of third-->
         </section>
 
         <!-- Skills -->
