--- a/index.html
+++ b/index.html
@@ -13,7 +13,69 @@
 </head>
 <body>
     <main>
-
+        <!-- work ex -->
+        <section class="work-experience d-flex" id="work-experience"> 
+            <h2>
+                WORK experience
+            </h2>
+            <article class="first-job">
+                <h3>Google - web-developer</h3>
+                <h5>
+                    Jan 2021- Dec 2022
+                </h5>
+                <p>
+                    <ol>
+                        <li>
+                            worked with the team leader to build responsive projects, using preporcessors, bootstrap, and Google Fonts
+                        </li>
+                        <li>
+                            Planned ahead project, using JIRA software and Google SaaS.
+                        </li>
+                        <li>
+                            Worked with clients to build cloud services and projects 
+                        </li>
+                    </ol>
+                </p>
+            </article>
+            <article class="second-job">
+                <h3>Microsoft - web-developer</h3>
+                <h4>
+                    Jan 2020- Dec 2020
+                </h4>
+                <p>
+                    <ol>
+                        <li>
+                            Deployed projects following the Microsoft project manager software, following the due date
+                        </li>
+                        <li>
+                            Planned and scheduled meetings with prospective clients.
+                        </li>
+                        <li>
+                            Worked with clients to build cloud services and projects 
+                        </li>
+                    </ol>
+                </p>
+            </article>
+            <article class="third-job">
+                <h3> Apple - app-developer</h3>
+                <h4>
+                    Mar 2017- Jan 2020
+                </h4>
+                <p>
+                    <ol>
+                        <li>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates eum minima quos minus!
+                        </li>
+                        <li>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis quaerat in unde laborum ad corporis fuga labore libero animi a. Maxime nobis repellat sit ducimus exercitationem aspernatur autem officia, quisquam dolorem sunt odio.
+                        </li>
+                        <li>
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta eveniet ipsam alias earum obcaecati eligendi ducimus pariatur, magnam ipsum?
+                        </li>
+                    </ol>
+                </p>
+            </article>
+        </section>
         <!-- project -->
       
         <section class="projects" id="projects">
@@ -21,15 +83,13 @@
                 projects
             </h2>
             <!-- accordion wrapper -->
-            <div class="accordion" id="accordionExample">
-                <!-- First project -->
-                <div class="accordion-item">
-                  <h2 class="accordion-header" id="headingOne">
-                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#projectOne" aria-expanded="false" aria-controls="collapseOne">
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingOne">
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#projectone" aria-expanded="false" aria-controls="collapseone">
                       Personal Portfolio - Html and CSS
                     </button>
                     </h2>
-                    <div id="projectone" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#projectWrapper">
+                    <div id="projectone" class="accordion-collapse collapse show" aria-labelledby="headingone" data-bs-parent="#projectWrapper">
                         <div class="accordion-body">
                         <aside>
                             #1 screenshot
@@ -42,8 +102,6 @@
                         </a>
                     </div>
                   </div>
-                </div>
-            </div>
             <!-- second -->
             <div class="accordion-item">
                 <h2 class="accordion-header" id="headingTwo">
@@ -135,7 +193,7 @@
                 <!-- <img src="" class="card-img-top" alt="..."> -->
                 <aside></aside>
                 <div class="card-body">
-                  <h5 class="card-title">Tamwood College</h5>
+                  <h6 class="card-title">Tamwood College</h6>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                   <a href="https://tamwood.com/careers/web-developer/" target="_blank" class="btn btn-primary">Web development</a>
                 </div>
