--- a/index.html
+++ b/index.html
@@ -13,6 +13,20 @@
 </head>
 <body>
     <main>
+
+        <!-- about -->
+        <section class="about" id="about">
+            <h2>
+                about me
+            </h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora inventore quia quo, consequuntur repellat voluptate impedit dolor quisquam, sint ullam quae neque cupiditate.
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam quibusdam pariatur repellendus minima quos, quaerat dolorum a voluptas. Dignissimos, sed totam. Ea, quos tenetur modi autem dolorum inventore quibusdam fuga quas animi porro.
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni ipsum, consectetur quidem deserunt minima ad odio provident asperiores optio praesentium, nostrum, doloremque quae culpa! Harum dolorum repellendus assumenda aut veniam atque repellat corporis voluptate! Hic at optio minus dolores?
+            </p>
+        </section>
         <!-- work ex -->
         <section class="work-experience d-flex" id="work-experience"> 
             <h2>
