--- a/index.html
+++ b/index.html
@@ -13,6 +13,33 @@
 </head>
 <body>
     <main>
+        <!-- header -->
+
+        <header class="header" id="header">
+
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="./img/xml.jpeg" class="d-block w-100" alt="xml code">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./img/javascript.jpeg" class="d-block w-100" alt="react code">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./img/css.jpeg" class="d-block w-100" alt="scss code">
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+
+        </header>
 
         <!-- about -->
         <section class="about" id="about">
