--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
 </head>
 <body>
     <main>
+
+        <nav class="navigation-menu d-none" id="navigation-menu">
+            <ul class="d-flex">
+                <li><a href="#header">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#work-experience">Work Experience</a></li>
+                <li><a href="#project">Projects</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#education">Education</a></li>
+                <li><a href="#contact">contact</a></li>
+            </ul>
+        </nav>
         <!-- header -->
 
         <header class="header" id="header">
